--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
 * {
 	box-sizing: border-box;
 }
+body {
+	font-family: "Bebas Neue", cursive;
+	font-family: "Lobster", cursive;
+	font-family: "Poppins", sans-serif;
+}
+
+header .navbar .navbar-brand {
+	font-size: 22px;
+	font-weight: 700;
+	color: #3e3e3e;
+}
+header .navbar .nav-item .nav-link {
+	color: #3e3e3e;
+	font-weight: 500;
+}
+header .carousel {
+	width: 100vw;
+	height: 550px;
+}
+header .carousel .carousel-item {
+	width: 100%;
+
+	height: 550px;
+}
+header .carousel .carousel-item img {
+	width: 100% !important;
+	height: 100% !important;
+}
+header .carousel .carousel-caption h5 {
+	font-size: 48px;
+	font-weight: 600;
+}
+header .carousel .carousel-caption p {
+	font-weight: 300;
+}
+header .carousel .carousel-caption button {
+	width: 148px;
+	height: 44px;
+	font-weight: 700;
+}
+header .carousel .carousel-caption button a {
+	text-decoration: none;
+}
