--- a/style.css
+++ b/style.css
@@ -135,3 +135,18 @@ main .package .pricing .highlights button {
 	background-color: white;
 	color: #3f87f5;
 }
+main .faq img {
+	width: 546px;
+	height: 364px;
+	max-width: 100%;
+	max-height: 100%;
+}
+main .faq .accordion-item h2 button {
+	font-weight: 500;
+	font-size: 20px;
+	color: #383838;
+}
+main .faq .accordion-item .accordion-body {
+	color: #7e848c;
+	font-size: 16px;
+}
