--- a/style.css
+++ b/style.css
@@ -135,6 +135,16 @@ main .package .pricing .highlights button {
 	background-color: white;
 	color: #3f87f5;
 }
+main .feedback .card__item {
+	width: 360px;
+	height: 323px;
+	max-width: 100vw;
+}
+main .feedback .card__item img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
 main .faq img {
 	width: 546px;
 	height: 364px;
