--- a/responsive.css
+++ b/responsive.css
@@ -27,6 +27,9 @@
 	main .album .right p {
 		font-size: 15px;
 	}
+	main .album .toast {
+		right: 20px;
+	}
 	main .package .pricing .item {
 		margin-right: 0;
 		margin-top: 24px;
