--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
 	font-family: "Lobster", cursive;
 	font-family: "Poppins", sans-serif;
 }
+/* Header Style Start */
 
+/* Navigation Style Start */
 header .navbar .navbar-brand {
 	font-size: 22px;
 	font-weight: 700;
@@ -16,6 +18,9 @@ header .navbar .nav-item .nav-link {
 	color: #3e3e3e;
 	font-weight: 500;
 }
+/* Navigation Style End */
+
+/* Carousel Style Start */
 header .carousel {
 	width: 100vw;
 	height: 550px;
@@ -46,7 +51,11 @@ header .carousel .carousel-caption button {
 header .carousel .carousel-caption button a {
 	text-decoration: none;
 }
+/* Carousel Style Start */
+/* Header Style End */
+/* Main Section Start */
 
+/*  Album Section  Start */
 main .album .left img {
 	max-height: 364px !important;
 	width: 100%;
@@ -76,6 +85,8 @@ main .album .toast .toast-body button {
 	right: 0px;
 	transform: scale(75%);
 }
+/*  Album Section  End */
+/*  Package Section  Start */
 main .package .pricing .item {
 	margin-right: 36px;
 }
@@ -152,6 +163,9 @@ main .package .pricing .highlights button {
 	background-color: white;
 	color: #3f87f5;
 }
+/*  Package Section  End */
+
+/*  Feedback Section  Start */
 main .feedback .card__item {
 	width: 360px;
 	height: 323px;
@@ -162,6 +176,8 @@ main .feedback .card__item img {
 	height: 100px;
 	border-radius: 50%;
 }
+/*  Feedback Section  End */
+/* FAQ section start */
 main .faq img {
 	width: 546px;
 	height: 364px;
@@ -177,7 +193,10 @@ main .faq .accordion-item .accordion-body {
 	color: #7e848c;
 	font-size: 16px;
 }
+/* FAQ section End */
 
+/* Main Section End */
+/* Footer Section Start */
 footer {
 	background-color: #0b0d17;
 	max-width: 100vw;
@@ -216,3 +235,4 @@ footer .social a h3 {
 footer button:hover {
 	background-color: #0b0d17 !important;
 }
+/* Footer Section End */
